<resources>
    <string name="app_name">乐视车联</string>
    <string name="action_settings">Settings</string>
    <string name="menu_map">导航</string>
    <string name="menu_leradio">LeRadio</string>
    <string name="menu_wechat">微信</string>
    <string name="menu_phone">电话</string>
    <string name="menu_live">LIVE</string>
    <string name="menu_levedio">乐视视频</string>
    <string name="menu_set">设置</string>
    <string name="menu_tingjiandan">停简单</string>
    <string name="menu_kuwo">酷我</string>
    <string name="menu_baidu">百度地图</string>
    <string name="menu_gaode">高德地图</string>
    <string name="menu_local_music">本地</string>
    <string name="menu_qplay">QQ音乐</string>
    <string name="menu_favorcar">爱车服务</string>
    <string name="main_nav_map">导航</string>
    <string name="main_nav_music">LeRadio</string>
    <string name="main_nav_localmusic">本地音乐</string>
    <string name="main_nav_wechat">微信</string>
    <string name="main_nav_dial">电话</string>
    <string name="main_nav_live">LIVE</string>
    <string name="main_nav_levedio">乐视视频</string>
    <string name="main_nav_setting">设置</string>
    <string name="main_nav_tingjiandan">停简单</string>
    <string name="main_nav_kuwo">酷我</string>
    <string name="main_kuwo_music">酷我音乐</string>
    <string name="main_nav_local">本地</string>
    <string name="main_local_music">本地音乐</string>
    <string name="main_nav_magical">神奇</string>
    <string name="main_nav_collection">收藏</string>
    <string name="main_nav_recent">最近</string>
    <string name="main_nav_baidu_map">百度地图</string>
    <string name="main_nav_gaode_map">高德地图</string>
    <string name="main_nav_baidu_navi">百度导航</string>
    <string name="main_nav_gaode_navi">高德导航</string>
    <string name="voice_navi">您可以这样说：</string>
    <string name="vr_mul_result">找到多个结果请选择</string>
    <string name="main_not_install_weixin">您的手机未安装微信</string>
    <string name="main_not_install_gaode">未安装高德地图</string>
    <string name="main_not_install_baidu">未安装百度地图</string>
    <string name="main_download_letv_live">开始下载乐视live</string>
    <string name="main_download_letv_video">开始下载乐视视频</string>
    <string name="main_is_download_letv_live">是否下载乐视Live?</string>
    <string name="main_is_download_letv_video">是否下载乐视视频?</string>
    <string name="main_calling_not_support_voice">通话过程中不支持语音功能</string>
    <string name="main_is_tingjiandan_navi">正在进行停简单导航 .</string>
    <string name="music_no_local_data">您还没有任何本地音频文件</string>
    <string name="music_no_favor_data">您还没有收藏任何音频文件</string>
    <string name="music_no_recent_data">您还没有听过任何音频文件</string>
    <string name="music_no_download_data">您还没有下载任何音频文件</string>
    <string name="music_download_bt_hint">开启神奇下载</string>
    <string name="music_download_bt_hint_opened">神奇下载已开启</string>
    <string name="music_download_hint">开启后ecolink会在Wi-Fi情况下\n&#160;&#160;&#160;&#160;&#160;&#160;自动下载您收藏的内容</string>
    <string name="msg_no_net">您的网络不给力\n推荐您先听本地、神奇下载</string>
    <string name="msg_bad_net">播放出错\n请稍后重试</string>
    <string name="toast_no_wchart">您的手机未安装微信.</string>
    <string name="toast_no_letvclient">请下载安装乐视视频客户端.</string>
    <string name="wait_download">等待下载.</string>
    <string name="click_resume_download">点击继续下载</string>
    <string name="un_define_name">未命名</string>
    <string name="str_all_pause">全部暂停</string>
    <string name="str_all_play">播放全部</string>
    <string name="str_on_downloading">正在下载</string>
    <string name="str_not_collection">你还没有收藏过</string>
    <string name="str_live_doing">直播中</string>
    <string name="str_live_not_start">未开始</string>
    <string name="str_copration_media">合作媒体：</string>
    <string name="str_paly_erro">播放异常</string>
    <string name="music_lable_hot">热门</string>
    <string name="music_lable_my">我的</string>
    <string name="music_lable_talkshow">脱口秀</string>
    <string name="music_lable_live">直播</string>
    <string name="music_lable_music">音乐</string>
    <string name="music_lable_Funny">搞笑</string>
    <string name="music_lable_story">小说</string>
    <string name="music_lable_Crosstalk">相声</string>
    <string name="music_lable_emotion">情感</string>
    <string name="music_lable_children">儿童</string>
    <string name="musice_live_list">直播节目列表</string>
    <string name="vr_music_tip_one">来一首忘情水</string>
    <string name="vr_music_tip_two">郭德纲</string>
    <string name="vr_music_tip_three">郭德纲</string>
    <string name="vr_map_tip_one">乐视大厦</string>
    <string name="vr_map_tip_two">我要去天安门</string>
    <string name="vr_map_tip_three">附近的加油站</string>
    <string name="vr_map_tip_four">附近的银行</string>
    <string name="vr_call_tip_one">打电话给大卫</string>
    <string name="vr_call_tip_two">拨打10086</string>
    <string name="vr_call_tip_three">拨打肯德基电话</string>
    <string name="vr_other_tip_one">今日天气</string>
    <string name="vr_other_tip_two">我想听相声</string>
    <string name="vr_other_tip_three">来个笑话</string>
    <string name="waiting_data">我在努力寻找中...</string>
    <string name="open_download">开启神奇下载</string>
    <string name="status">状态：</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="start">开始</string>
    <string name="volume">音量</string>
    <string name="start_dialog">调用语音识别对话框</string>
    <string name="error_start">启动失败: 0x%1$s</string>
    <string name="in_recog">正在识别</string>
    <string name="please_speak">请说话</string>
    <string name="speaking">说话中</string>
    <string name="tofinish">说完</string>
    <string name="setting">设置</string>
    <string name="setting_lebox">轻车机</string>
    <string name="setting_ecolink">ecolink互联</string>
    <string name="setting_fm">乐车盒调频设</string>
    <string name="str_connect">已连接</string>
    <string name="str_unconnect">未连接</string>
    <string name="str_history">历史</string>
    <string name="history_recode">历史记录</string>
    <string name="clear_history">清空历史</string>
    <string name="delete_success">删除成功</string>
    <string name="str_no_colleaction">没有收藏的专辑</string>
    <string name="str_not_listen">你还没有收听过</string>
    <string name="check_network">网络无法连接</string>
    <string name="str_voice_recognaize_faild">识别失败请点击麦克重试!</string>
    <string name="str_voice_listen_faild">没听清,请点击麦克重试!</string>
    <string name="str_voice_retry">请单击麦克重试!</string>
    <string name="str_voice_restart">单击重新开始</string>
    <string name="str_voice_serching">搜索中</string>
    <string name="str_voice_help">有什么可以帮您的</string>
    <string name="str_voice_serch_null">未找到任何结果</string>
    <string name="str_voice_listening">聆听中</string>
    <string name="str_voice_recognizing">识别中</string>
    <string name="str_voice_search_result">为您找到以下结果:</string>
    <string name="str_voice_check_record_permition">请检查录音权限</string>
    <string name="str_voice_click_check">单击检查权限</string>
    <string name="str_voice_limit_permition">权限不足</string>
    <string name="str_voice_check_permition">请检查权限</string>
    <string name="str_voice_recognize_faild">识别失败</string>
    <string name="str_voice_tmeout">连接超时</string>
    <string name="str_voice_check_network">单击检查网络</string>
    <string name="str_voice_part_result">~临时识别结果：</string>
    <string name="str_voice_shwich_tts">*引擎切换至</string>
    <string name="str_voice_online">在线</string>
    <string name="str_voice_offline">离线</string>
    <string name="str_voice_reparing">准备中</string>
    <string name="str_voice_network_erro">网络问题</string>
    <string name="str_voice_no_input">没有语音输入</string>
    <string name="map_home">回家</string>
    <string name="map_work">公司</string>
    <string name="easy_stop_here">停这里</string>
    <string name="map_no_history1">您暂时还没有\n去过任何地方</string>
    <string name="map_no_history">  </string>
    <string name="map_route_start_navi">开始导航</string>
    <string name="map_search_company">请添加公司的地址</string>
    <string name="map_search_home">请添加家的地址</string>
    <string name="map_navi_destination">请输入目的地</string>
    <string name="map_error_network">搜索失败,请检查网络连接！</string>
    <string name="map_error_key">key验证无效！</string>
    <string name="map_error_other">未知错误，请稍后重试!错误码为</string>
    <string name="click_start_seatch">点击搜索目的地</string>
    <string name="map_no_result">对不起，没有搜索到相关数据！</string>
    <string name="map_choose_way">路线选择</string>
    <string name="map_arrived">到达目的地</string>
    <string name="map_get_way_faild">路径计算失败，请检查网络或输入参数</string>
    <string name="map_get_way_ready">路径计算就绪</string>
    <string name="map_navi_end">导航结束</string>
    <string name="map_change_way">前方路线拥堵，路线重新规划</string>
    <string name="map_naviway_dispach">您已偏航</string>
    <string name="map_download_warn">请在“设置”中下载离线地图</string>
    <string name="congestion">避免拥堵</string>
    <string name="cost">避免收费</string>
    <string name="avoidhightspeed">不走高速</string>
    <string name="hightspeed">高速优先</string>
    <string name="map_distance">距您%1$s</string>
    <string name="navi_strategy_pre">路线偏好</string>
    <string name="update_route">更新路线</string>
    <string name="all_offline">城市列表</string>
    <string name="download_offline">已下载</string>
    <string name="str_download">下载</string>
    <string name="str_downloading">下载中</string>
    <string name="download_error">下载出错</string>
    <string name="download_comlitely">下载完成</string>
    <string name="download_resume">继续下载</string>
    <string name="download_waiting">等待中</string>
    <string name="download_pause">暂停</string>
    <string name="download_update">更新</string>
    <string name="download_have_update">有更新</string>
    <string name="can_update">可更新</string>
    <string name="download_wifi_only">没有wifi连接， 只在wifi下更新</string>
    <string name="download_check_update">检查更新</string>
    <string name="download_manage">下载管理</string>
    <string name="download_unPackage">正在解压:</string>
    <string name="download_unPackageing">解压中</string>
    <string name="download_connect_faild">连接失败</string>
    <string name="download_unPackage_faild">解压失败</string>
    <string name="download_unPackage_cannot_delete">解压文件不能删除</string>
    <string name="download_installed">已安装</string>
    <string name="str_Whole_country">全国</string>
    <string name="str_directly_Municipality">直辖市</string>
    <string name="str_hm">港澳</string>
    <string name="str_Province">省份</string>
    <string name="weather_live">实时</string>
    <string name="weather_forecast">预报</string>
    <string name="report_time">发布时间</string>
    <string name="location_share">位置分享</string>
    <string name="delete">删除</string>
    <string name="lots_manage">批量管理</string>
    <string name="all_checked">全选</string>
    <string name="manager">管理</string>
    <string name="delete_map">确认删除离线数据?</string>
    <string name="weather_sunny" translatable="false">晴</string>
    <string name="weather_sunny_night" translatable="false">晚上晴</string>
    <string name="weather_cloudy" translatable="false">多云</string>
    <string name="weather_cloudy_night" translatable="false">晚上多云</string>
    <string name="weather_shade" translatable="false">阴</string>
    <string name="weather_hail" translatable="false">冰雹</string>
    <string name="no_net">无网络,请检查网络设置</string>
    <string name="notification">《乐视车联服务条款》</string>
    <string name="str_access">同意</string>
    <string name="str_never_mind">下次不再提醒</string>
    <string name="delete_download">确定删除文件吗?</string>
    <string name="str_dail">拨号</string>
    <string name="str_contact">通讯录</string>
    <string name="str_exit_navi">是否退出导航?</string>
    <string name="help_warn">开启“USB调试”连接手机</string>
    <string name="help_step1">1.点击进入设置</string>
    <string name="help_step2">2.点击开发者选项</string>
    <string name="yellow_page">黄页</string>
    <string name="thincar_title">轻车机</string>
    <string name="thincar_step_first">1.确认乐车盒已经连接电源</string>
    <string name="thincar_step_second">2.点击下方“去连接”，在系统设置中打开蓝牙，并连接“Le AutoKits 1S”</string>
    <string name="thincar_no_thincar">我还没有轻车机,</string>
    <string name="thincar_buy">点击购买</string>
    <string name="thincar_link">去连接</string>
    <string name="thincar_help">"i"</string>
</resources>