<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@drawable/anchor_indicator"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_download"
        android:layout_marginTop="@dimen/size_45dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textColor="@color/transparent_black_60"
        android:textSize="@dimen/textsize_16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="@dimen/size_40dp"
        android:layout_marginRight="@dimen/size_40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_download"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:background="@drawable/popupwindow_bt_sure_selector"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@drawable/popupwindow_textcolor_sure_selector"
            android:textSize="@dimen/textsize_16sp" />
        <TextView
            android:id="@+id/tv_cancle"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_marginLeft="40dp"
            android:background="@drawable/popupwindow_bt_cancle_selector"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@drawable/popupwindow_textcolor_cancle_selector"
            android:textSize="@dimen/textsize_16sp" />

    </LinearLayout>

</LinearLayout>
