<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/size_48dp"
        android:background="@color/transparent_5">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/size_40dp"
            android:layout_height="@dimen/size_40dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/size_4dp"
            android:layout_marginRight="@dimen/size_4dp"
            android:scaleType="center"
            android:background="@drawable/button_circle_selector"
            android:src="@mipmap/back_icon" />

        <TextView
            android:id="@+id/tv_line"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/size_5dp"
            android:layout_marginTop="@dimen/size_5dp"
            android:layout_toRightOf="@id/iv_back"
            android:background="@color/transparent_30" />


        <TextView
            android:id="@+id/tvTitle"
            android:layout_toRightOf="@id/tv_line"
            android:layout_width="match_parent"
            android:text="@string/thincar_title"
            android:textColor="@color/white"
            android:layout_marginRight="56dp"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_height="match_parent" />
        
        <Button
            android:id="@+id/btn_thincar_help"
            android:layout_width="@dimen/size_30dp"
            android:layout_height="@dimen/size_30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:layout_marginRight="@dimen/size_10dp"
            android:text="@string/thincar_help"
            android:textAllCaps="false"
            android:textColor="@color/setting_thincar_no"
            android:textSize="@dimen/size_18sp"
            android:background="@drawable/thincar_help"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/size_20dp"
        android:paddingRight="@dimen/size_20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            
            <TextView
                android:id="@+id/tv_step_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_20dp"
                android:layout_alignParentLeft="true"
                android:text="@string/thincar_step_first"
                android:textSize="@dimen/thincar_text_size"
                android:textColor="@color/setting_thincar_text"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_step_one"
                android:layout_marginTop="@dimen/size_32dp"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/step_one"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <TextView
                android:id="@+id/tv_step_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_20dp"
                android:layout_alignParentLeft="true"
                android:text="@string/thincar_step_second"
                android:textSize="@dimen/thincar_text_size"
                android:textColor="@color/setting_thincar_text"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_step_two"
                android:layout_marginTop="@dimen/size_32dp"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/step_two"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            
            <TextView
                android:id="@+id/tv_no_thicar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/size_20dp"
                android:text="@string/thincar_no_thincar"
                android:textColor="@color/setting_thincar_no"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_20dp"
                android:layout_toLeftOf="@id/tv_no_thicar"
                android:layout_marginRight="@dimen/size_7dp"
                android:src="@mipmap/bug"/>

            <Button
                android:id="@+id/btn_buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_no_thicar"
                android:layout_marginTop="@dimen/size_20dp"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="@string/thincar_buy"
                android:textColor="@color/thincar_link"
                android:background="@color/thincar_buy_background"/>

            <View
                android:layout_width="@dimen/size_55dp"
                android:layout_height="@dimen/size_1dp"
                android:background="@color/thincar_link"
                android:layout_below="@id/btn_buy"
                android:layout_alignLeft="@id/btn_buy"
                android:layout_marginTop="2px"/>

            <Button
                android:id="@+id/btn_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_no_thicar"
                android:layout_marginTop="@dimen/size_20dp"
                android:layout_centerHorizontal="true"
                android:paddingLeft="@dimen/size_50dp"
                android:paddingRight="@dimen/size_50dp"
                android:text="@string/thincar_link"
                android:textSize="@dimen/size_18sp"
                android:textColor="@color/setting_thincar_text"
                android:background="@drawable/link_button_background"/>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
