<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/size_10dp"
    android:paddingRight="@dimen/size_10dp"

    >
    <TextView
        android:layout_marginTop="@dimen/size_20dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_warn"
        android:textSize="@dimen/size_14sp"
        android:textColor="@color/transparent_60"/>
    <LinearLayout
        android:layout_marginTop="@dimen/size_20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/step1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_step1"
                android:textSize="@dimen/size_12sp"
                android:textColor="@color/transparent_85"/>
            <ImageView
                android:src="@mipmap/mic_ic_map"
                android:scaleType="centerInside"
                android:id="@+id/step_image_1"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/step2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_step2"
                android:textSize="@dimen/size_12sp"
                android:textColor="@color/transparent_85"/>
            <ImageView
                android:src="@mipmap/mic_ic_map"
                android:scaleType="centerInside"
                android:id="@+id/step_image_2"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>



</LinearLayout>